# PROMPTapp

./: .gitignore  app.py  pyproject.toml  start.sh
myenv/: pyvenv.cfg
promptapp/: app.py
promptapp/templates/: testerReg.html
templates/: emailConfirm.html
